--- a/shows.html
+++ b/shows.html
@@ -180,7 +180,7 @@
                 <div class="content">
                     <div class="title">2009</div>
                     <div class="name">Pokémon: Arceus and the Jewel of Life</div>
-                    <div class="des">Many thousands of years ago, legendary Alpha Pokemon Arceus came to Earth to retrieve the Jewel of Life, which it had lent to a man called Damos - but Damos betrayed it, attacking Arceus with a large army of Pokemon. Arceus retaliated, and then, thinking it had killed Damos, went to sleep, but recently it has awoken and returned to Earth to find the Jewel of Life.</div>
+                    <div class="des">Ash and his friends team up with legendary Pokémon to stop Arceus from destroying time and space.</div>
                 </div>
             </div>
 
@@ -188,15 +188,63 @@
                 <div class="content">
                     <div class="title">2008</div>
                     <div class="name">Pokémon: Giratina & the Sky Warrior</div>
-                    <div class="des">When scientist Newton Graceland discovers a parallel universe known as the Reverse World, inhabited solely by the Pokémon called Giratina, he plans to harness its power. Although Graceland abandons that idea, his evil assistant Zero secretly plots to capture the Reverse World for himself. In order to stop him, Graceland enlists Pokémon trainers Ash, Dawn, and Brock to help Giratina stave off the treacherous Zero.</div>
+                    <div class="des">Ash and his friends team up with Giratina to stop a battle between legendary Pokémon Dialga and Palkia that threatens space and time.</div>
                 </div>
             </div>
 
              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/pokemon%20darkrai.png?raw=true);">
                 <div class="content">
                     <div class="title">2007</div>
-                    <div class="name">Pokémon: The Rise of Darkra</div>
-                    <div class="des">Between them, the Pokémon Palkia and Dialga can warp both space and time. Their epic inter-dimensional battle spills into the bucolic village of Alamos Town just as youngsters Ash (Kunihiko Yuyama), Brock (Hideki Sonoda) and Dawn (Choji Yoshikawa) arrive in town for a Pokémon contest.</div>
+                    <div class="name">Pokémon: The Rise of Darkrai</div>
+                    <div class="des">Ash and his friends join forces with Darkrai to prevent a battle between Dialga and Palkia from destroying the world.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/scream1.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">1996</div>
+                    <div class="name">Scream</div>
+                    <div class="des">Wes Craven re-invented and revitalised the slasher-horror genre with this modern horror classic, which manages to be funny, clever and scary, as a fright-masked knife maniac stalks high-school students in middle-class suburbia. Craven is happy to provide both tension and self-parody as the body count mounts - but the victims aren't always the ones you'd expect.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/soul.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2020</div>
+                    <div class="name">Soul</div>
+                    <div class="des">Joe is a middle-school band teacher whose life hasn't quite gone the way he expected. His true passion is jazz -- and he's good. But when he travels to another realm to help someone find their passion, he soon discovers what it means to have soul.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/squid%20game.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2021</div>
+                    <div class="name">Squid Game</div>
+                    <div class="des">Hundreds of cash-strapped contestants accept an invitation to compete in children's games for a tempting prize, but the stakes are deadly.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/steins%20gate.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2011</div>
+                    <div class="name">Steins;Gate</div>
+                    <div class="des">A group of friends create a machine that can send messages to the past and alter their present timeline.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/suits.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2011</div>
+                    <div class="name">Suits</div>
+                    <div class="des">Big-time Manhattan corporate lawyer Harvey Specter and his team, which includes Donna Paulsen, Louis Litt, and Alex Williams, are launched into a play for power when a new partner joins the firm. With his two best associates gone and Jessica back in Chicago, Specter and the team try to adjust to a new normal without them. The team faces down betrayals, fiery relationships, and secrets that eventually come to light. Old and new rivalries surface among members of the team as they learn to deal with their new member.</div>
+                </div>
+            </div>
+
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/suzume.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2022</div>
+                    <div class="name">Suzume</div>
+                    <div class="des">As the skies turn red and the planet trembles, Japan stands on the brink of disaster. However, a determined teenager named Suzume sets out on a mission to save her country. Able to see supernatural forces that others cannot, it's up to her to close the mysterious doors that are spreading chaos across the land. A perilous journey awaits as the fate of Japan rests on her shoulders.</div>
                 </div>
             </div>
 
