--- a/shows.html
+++ b/shows.html
@@ -16,6 +16,14 @@
 
         <div class="list">
 
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/86.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2021</div>
+                    <div class="name">86</div>
+                    <div class="des">The `Eighty-Six' secretly fight on board the Juggernaut, an unmanned combat machine developed by the Republic of San Magnolia. Shin, the captain of the 'Spearhead', a unit formed by the Eighty-Six, meets Raina, an elite Republic soldier.</div>
+                </div>
+            </div>
+
             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/alice%20in%20borderland.jpg?raw=true);">
                 <div class="content">
                     <div class="title">2020</div>
@@ -179,7 +187,7 @@
              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/pokemon%20arceus.jpg?raw=true);">
                 <div class="content">
                     <div class="title">2009</div>
-                    <div class="name">Pokémon: Arceus and the Jewel of Life</div>
+                    <div class="name">Pokémon: Arceus & the Jewel of Life</div>
                     <div class="des">Ash and his friends team up with legendary Pokémon to stop Arceus from destroying time and space.</div>
                 </div>
             </div>
@@ -240,11 +248,115 @@
                 </div>
             </div>
 
-              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/suzume.jpg?raw=true);">
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/suzume%201.jpg?raw=true);">
                 <div class="content">
                     <div class="title">2022</div>
                     <div class="name">Suzume</div>
                     <div class="des">As the skies turn red and the planet trembles, Japan stands on the brink of disaster. However, a determined teenager named Suzume sets out on a mission to save her country. Able to see supernatural forces that others cannot, it's up to her to close the mysterious doors that are spreading chaos across the land. A perilous journey awaits as the fate of Japan rests on her shoulders.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/talk%20to%20me.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2022</div>
+                    <div class="name">Talk to Me</div>
+                    <div class="des">When a group of friends discover how to conjure spirits with an embalmed hand, they become hooked on the new thrill and high-stakes party game -- until one of them goes too far and unleashes terrifying supernatural forces.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/the%20descent.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2006</div>
+                    <div class="name">The Descent</div>
+                    <div class="des">A year after a severe emotional trauma, Sarah (Shauna Macdonald) goes to North Carolina to spend some time exploring caves with her friends; after descending underground, the women find strange cave paintings and evidence of an earlier expedition, then learn they are not alone: Underground predators inhabit the crevasses, and they have a taste for human flesh.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/the%20menu.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2022</div>
+                    <div class="name">The Menu</div>
+                    <div class="des">Shocking surprises await a couple when they travel to a coastal island to sample a chef's lavish menu at an exclusive restaurant.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/the%20polarexpress1.png?raw=true);">
+                <div class="content">
+                    <div class="title">2004</div>
+                    <div class="name">The Polar Express</div>
+                    <div class="des">A young boy who has grown sceptical of Santa Claus is shocked to see a train stop outside his window on Christmas Eve, destined for the North Pole. When he accepts an invitation from the conductor to climb on board, he embarks on a white-knuckle ride to Santa's headquarters, where he makes fast friends and learns an invaluable lesson about the true spirit of Christmas.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/the%20revenant.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2015</div>
+                    <div class="name">The Revenant</div>
+                    <div class="des">While exploring the uncharted wilderness in 1823, frontiersman Hugh Glass sustains life-threatening injuries from a brutal bear attack. When a member of his hunting team kills his young son and leaves him for dead, Glass must utilize his survival skills to find a way back to civilization. Grief-stricken and fueled by vengeance, the legendary fur trapper treks through the snowy terrain to track down the man who betrayed him.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/the%20super%20mario%20bros.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2023</div>
+                    <div class="name">The Super Mario Bros. Movie</div>
+                    <div class="des">Mario and Luigi embark on an adventure to rescue Princess Peach from Bowser, navigating the colorful and dangerous Mushroom Kingdom.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/thewildrobot.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2024</div>
+                    <div class="name">The Wild Robot</div>
+                    <div class="des">Shipwrecked on a deserted island, a robot named Roz must learn to adapt to its new surroundings. Building relationships with the native animals, Roz soon develops a parental bond with an orphaned gosling.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/titanic.png?raw=true);">
+                <div class="content">
+                    <div class="title">1997</div>
+                    <div class="name">Titanic</div>
+                    <div class="des">A poor artist and a rich debutante meet and fall in love on the famously ill-fated maiden voyage of the `unsinkable' RMS Titanic in 1912.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/turning%20red.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2022</div>
+                    <div class="name">Turning Red</div>
+                    <div class="des">A thirteen-year-old girl is torn between staying her mother's dutiful daughter and the changes of adolescence. And as if the challenges were not enough, whenever she gets overly excited she transforms into a giant red panda.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/violetevergarden.png?raw=true);">
+                <div class="content">
+                    <div class="title">2018</div>
+                    <div class="name">Violet Evergarden</div>
+                    <div class="des">The war is over, and Violet Evergarden needs a job. Scarred and emotionless, she takes a job as a letter writer to understand herself and her past.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/violetevergardenthemovie.png?raw=true);">
+                <div class="content">
+                    <div class="title">2020</div>
+                    <div class="name">Violet Evergarden: The Movie</div>
+                    <div class="des">After the aftermath of a war, a young girl who was used as a tool for war learns to properly live. With the scars of burns, she goes back to her past to discover her true feelings towards the Major.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/wall%20e.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2008</div>
+                    <div class="name">WALL-E</div>
+                    <div class="des">WALL-E, short for Waste Allocation Load Lifter Earth-class, is the last robot left on Earth. He spends his days tidying up the planet, one piece of garbage at a time. But during 700 years, WALL-E has developed a personality, and he's more than a little lonely. Then he spots EVE, a sleek and shapely probe sent back to Earth on a scanning mission. Smitten WALL-E embarks on an adventure when he follows EVE across the galaxy.</div>
+                </div>
+            </div>
+
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/your%20name.jpg?raw=true);">
+                <div class="content">
+                    <div class="title">2016</div>
+                    <div class="name">Your Name</div>
+                    <div class="des">Two teenagers share a profound, magical connection upon discovering they are swapping bodies. Things manage to become even more complicated when the boy and girl decide to meet in person.</div>
                 </div>
             </div>
 
