--- a/shows.html
+++ b/shows.html
@@ -216,7 +216,7 @@
                 </div>
             </div>
 
-              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/soul.jpg?raw=true);">
+              <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/soul%201.png?raw=true);">
                 <div class="content">
                     <div class="title">2020</div>
                     <div class="name">Soul</div>
@@ -284,7 +284,7 @@
                 <div class="content">
                     <div class="title">2004</div>
                     <div class="name">The Polar Express</div>
-                    <div class="des">A young boy who has grown sceptical of Santa Claus is shocked to see a train stop outside his window on Christmas Eve, destined for the North Pole. When he accepts an invitation from the conductor to climb on board, he embarks on a white-knuckle ride to Santa's headquarters, where he makes fast friends and learns an invaluable lesson about the true spirit of Christmas.</div>
+                    <div class="des">A young boy embarks on a magical train ride to the North Pole, where he discovers the true spirit of Christmas.</div>
                 </div>
             </div>
 
@@ -304,7 +304,7 @@
                 </div>
             </div>
 
-             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/thewildrobot.jpg?raw=true);">
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/thewildrobot.png?raw=true);">
                 <div class="content">
                     <div class="title">2024</div>
                     <div class="name">The Wild Robot</div>
@@ -312,7 +312,7 @@
                 </div>
             </div>
 
-             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/titanic.png?raw=true);">
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/titanic%201.png?raw=true);">
                 <div class="content">
                     <div class="title">1997</div>
                     <div class="name">Titanic</div>
