--- a/shows.html
+++ b/shows.html
@@ -352,7 +352,7 @@
                 </div>
             </div>
 
-             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/your%20name.jpg?raw=true);">
+             <div class="item" style="background-image: url(https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/your%20name%201.png?raw=true);">
                 <div class="content">
                     <div class="title">2016</div>
                     <div class="name">Your Name</div>
