--- a/finn.html
+++ b/finn.html
@@ -1,55 +1,108 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Finn</title>
-    <style>
-        /* Set a gradient background for the entire page */
-        body {
-            background: linear-gradient(to right, #ffb8ca, #ffd1dd); /* Gradient from pink to orange */
-        }
-    </style>
-</head>
-<body style="font-family:Arial;">
-    <center>
-    <table width="700px" border="1">
-        <tr>
-            <td rowspan="2">
-                   <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnbio.jpg?raw=true" alt="My Photo 1" width="48%" style="float:left; margin-right: 4%;">
-                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnmin.jpg?raw=true" alt="My Photo 2" width="48%" style="float:left;">
-            </td>
-            <th width="500px" height="50px" bgcolor="#ffa8be">Biography</th>
-        </tr>
-        <tr>
-            <td>
-                <ul>
-                    <li>Name : Finn</li>
-                    <li>Birth Date : September 24, 2024</li>
-                    <li>Birth Place : Georgia</li>
-                    <li>Hobbies : Sleeping(inherited from his daddy)
-                        <br>Watching his sister solve the rubiks cube
-                        <br>Sleeping
-                        <br>Chewing on toys
-                        <br>Cuddling
-                        <br>Mommy and Daddy
-                        <br>Baby Scientist
-                    </li>
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <th colspan="2" height="50px" bgcolor="#ffa8be">About Finn</th>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <p>Finn is the third child of the Avestruz Family. He is a loving and cuddly child. Every night, he would ask his Mommy to cuddle with him and she can't bear to refuse. Sometimes, he grumble in
-                his sleep blaming his Daddy for making him sleepy. Despite this, he loves Daddy a lot (of course he loves Mommy more). As the youngest child in the
-                family, he loves to follow his older brother and older sister Alex and Mini. He spends the most time with Alex as they always cuddle together and only
-                met his sister through video calls. Although they never met, he loves watching his sister play games when he gets the chance. He wants to be a scientist
-                when he grows up (inspired by his brother).</p>
-            </td>
-        </tr>
-        <tr>
-    </table>
-    </center>
-</body>
+    <link rel="stylesheet" href="finn.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    />
+  </head>
+  <body>
+    <!-- Header with navigation bar -->
+
+    <!-- Main content container -->
+    <div class="section-container">
+ <section>
+        <div class="section-heading">
+          <h2 data-aos="fade-right" data-aos-duration="1000"><span class="heart">&#10084;</span></h2>
+        </div>
+        <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
+          One of the reasons why I love you so much is the way you are! There are many things that make up the person "Phil Avestruz", and each of these qualities
+          is the reason why your friends and I adore you. Everytime I learn something about you, I fall more in love with you. Here are my favorite things about you and memories
+          in our relationship.
+        </p>
+        <img
+          data-aos="fade-left"
+          data-aos-duration="1500"
+          data-aos-delay="200"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/Timeline.jpg?raw=true"
+          alt=""
+        />
+      </section>
+  
+      <section>
+        <div class="section-heading">
+          <h2 data-aos="fade-left" data-aos-duration="1000">Things I Love About You</h2>
+        </div>
+        <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
+          <span class="heart">&#10084;</span> Your cute fear of scary games<br>
+<span class="heart">&#10084;</span> our determination to achieve your goals <br>
+<span class="heart">&#10084;</span> Your silliness and jokes<br>
+<span class="heart">&#10084;</span> Your fake overconfidence<br>
+<span class="heart">&#10084;</span> Your fake smugness around me<br>
+<span class="heart">&#10084;</span> Your determination to get everything right<br>
+<span class="heart">&#10084;</span> Your openness<br>
+<span class="heart">&#10084;</span> Your ability to communicate<br>
+<span class="heart">&#10084;</span> Your affection<br>
+<span class="heart">&#10084;</span> Your possessiveness<br>
+<span class="heart">&#10084;</span> Your diligence<br>
+<span class="heart">&#10084;</span> Your support for your friends<br>
+<span class="heart">&#10084;</span> Your high sexual drive<br>
+<span class="heart">&#10084;</span> Your clinginess<br>
+<span class="heart">&#10084;</span> Your cuteness<br>
+<span class="heart">&#10084;</span> Your smile<br>
+<span class="heart">&#10084;</span> Your kisses<br>
+<span class="heart">&#10084;</span> You cheesing at Dune<br>
+<span class="heart">&#10084;</span> Whenever you want to read to me<br>
+<span class="heart">&#10084;</span> Whenever you say babo <br>
+        </p>
+        <img
+          data-aos="fade-right"
+          data-aos-duration="1500"
+          data-aos-delay="200"
+          src="images/image1.jpg"
+          alt=""
+        />
+      </section>
+
+      <section>
+        <div class="section-heading">
+          <h2 data-aos="fade-up" data-aos-duration="1000">Memorable Events</h2>
+        </div>
+        <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
+         <span class="heart">&#10084;</span> When we played Palworld and flirting <br>
+<span class="heart">&#10084;</span> When I killed you in A Way Out (sorry not sorry babo, im just that good!!) <br>
+<span class="heart">&#10084;</span> When I wheezed at "UH-HUH" while playing the bomb game<br>
+<span class="heart">&#10084;</span> When I got you into playing Minesweeper and Sudoku <br>
+<span class="heart">&#10084;</span> When we got addicted to Candy Crush <br>
+<span class="heart">&#10084;</span> When you introduced the "Light-Heavy Rain" and argued over it <br>
+<span class="heart">&#10084;</span> When I yelled "SHUT UPPPP" to you<br>
+<span class="heart">&#10084;</span> When we played jigsaw puzzles together<br>
+<span class="heart">&#10084;</span> When you almost called me "baby" before we started dating<br>
+<span class="heart">&#10084;</span> When we acted like lovers in It Takes Two<br>
+<span class="heart">&#10084;</span> Everytime you read books to me<br>
+<span class="heart">&#10084;</span> Everytime I wanted you play League when we first met<br>
+<span class="heart">&#10084;</span> When you completed your course registration<br>
+<span class="heart">&#10084;</span> When I help you with proofreading<br>
+<span class="heart">&#10084;</span> "Wait Luca have a drinking problem? Oh wait, hes European"<br>
+<span class="heart">&#10084;</span> When you got terrified at the baby starfish moving
+        </p>
+        <img
+          data-aos="fade"
+          data-aos-duration="1500"
+          data-aos-delay="200"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/memories.jpg?raw=true"
+          alt=""
+        />
+      </section>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
