--- a/finn.html
+++ b/finn.html
@@ -23,8 +23,8 @@
          Name : Finn<br>
                     Birth Date : September 24, 2024<br>
                     Birth Place : Georgia<br>
-                    Hobbies :
-                         <span class="heart">&#10084;</span>Sleeping(inherited from his daddy)<br>
+                    Hobbies : <br>
+                         <span class="heart">&#10084;</span>Sleeping (inherited from his daddy)<br>
                         <span class="heart">&#10084;</span>Watching his sister solve the rubiks cube<br>
                         <span class="heart">&#10084;</span>Sleeping<br>
                         <span class="heart">&#10084;</span>Chewing on toys<br>
@@ -36,14 +36,14 @@
           data-aos="fade-left"
           data-aos-duration="1500"
           data-aos-delay="200"
-          src="hhttps://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnbio.jpg?raw=true"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnbio.jpg?raw=true"
           alt=""
         />
       </section>
   
       <section>
         <div class="section-heading">
-          <h2 data-aos="fade-left" data-aos-duration="1000">Things I Love About You</h2>
+          <h2 data-aos="fade-left" data-aos-duration="1000"><span class="heart">Biography &#10084;</span></h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
           Finn is the third child of the Avestruz Family. He is a loving and cuddly child. Every night, he would ask his Mommy to cuddle with him and she can't bear to refuse. Sometimes, he grumble in
