--- a/mini.html
+++ b/mini.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>About Mini</title>
-    <style>
-        /* Set a gradient background for the entire page */
-        body {
-            background: linear-gradient(to right, #ffb8ca, #ffd1dd); /* Gradient from pink to orange */
-        }
-    </style>
-</head>
-<body style="font-family:Arial;">
-    <center>
-    <table width="700px" border="1">
-        <tr>
-            <td rowspan="2">
-                   <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/minibio.jpg?raw=true" alt="My Photo 1" width="48%" style="float:left; margin-right: 4%;">
-                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/miniphil.png?raw=true" alt="My Photo 2" width="48%" style="float:left;">
-            </td>
-            <th width="500px" height="50px" bgcolor="#ffa8be">Biography</th>
-        </tr>
-        <tr>
-            <td>
-                <ul>
-                    <li>Name : Mini (Minnie)</li>
-                    <li>Birth Date : January 31, 2024</li>
-                    <li>Birth Place : Georgia</li>
-                    <li>Hobbies : Rubik's Cubes (inherited from her Mommy)
-                        <br>Video games
-                        <br>Watching Daddy play video games
-                        <br>Fake sleeping
-                        <br>Cuddling
-                        <br>Mommy and Daddy
-                        <br>Rebellion Leader
-                    </li>
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <th colspan="2" height="50px" bgcolor="#ffa8be">About Mini</th>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <p>Mini is the second child of the Avestruz Family. She is a sweet child full of mischief and energy. Most would describe her as a little ball of energy. She spent the first 7 months with her Mommy
-                where she developed her interest in Rubik's cubes. After she went to accompany her Daddy, she gained an interest in video games. Alas, this gave her 
-                Mommy a headache because she would catch Mini neglecting her sleep to play games (due to her Daddy's encouragement). This sparks up her rebellious nature
-                that is similar to her older brother, Alex. Although she is mischievous, she adores her little brother, Finn, whom she calls and chat twice a week.</p>
-            </td>
-        </tr>
-        <tr>
-    </table>
-    </center>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Finn</title>
+    <link rel="stylesheet" href="mini.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    />
+  </head>
+  <body>
+    <!-- Header with navigation bar -->
+
+    <!-- Main content container -->
+    <div class="section-container">
+ <section>
+        <div class="section-heading">
+          <h2 data-aos="fade-right" data-aos-duration="1000"><span class="heart">Biography &#10084;</span></h2>
+        </div>
+        <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
+         Name : Finn<br>
+                    Birth Date : September 24, 2024<br>
+                    Birth Place : Georgia<br>
+                    Hobbies : <br>
+                         <span class="heart">&#10084;</span>Sleeping (inherited from his daddy)<br>
+                        <span class="heart">&#10084;</span>Watching his sister solve the rubiks cube<br>
+                        <span class="heart">&#10084;</span>Sleeping<br>
+                        <span class="heart">&#10084;</span>Chewing on toys<br>
+                        <span class="heart">&#10084;</span>Cuddling<br>
+                        <span class="heart">&#10084;</span>Mommy and Daddy<br>
+                        <span class="heart">&#10084;</span>Baby Scientist<br>
+        </p>
+        <img
+          data-aos="fade-left"
+          data-aos-duration="1500"
+          data-aos-delay="200"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnbio.jpg?raw=true"
+          alt=""
+        />
+      </section>
+  
+      <section>
+        <div class="section-heading">
+          <h2 data-aos="fade-left" data-aos-duration="1000"><span class="heart">Biography &#10084;</span></h2>
+        </div>
+        <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
+          Finn is the third child of the Avestruz Family. He is a loving and cuddly child. Every night, he would ask his Mommy to cuddle with him and she can't bear to refuse. Sometimes, he grumble in
+                his sleep blaming his Daddy for making him sleepy. Despite this, he loves Daddy a lot (of course he loves Mommy more). As the youngest child in the
+                family, he loves to follow his older brother and older sister Alex and Mini. He spends the most time with Alex as they always cuddle together and only
+                met his sister through video calls. Although they never met, he loves watching his sister play games when he gets the chance. He wants to be a scientist
+                when he grows up (inspired by his brother).
+        </p>
+        <img
+          data-aos="fade-right"
+          data-aos-duration="1500"
+          data-aos-delay="200"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnmin.jpg?raw=true"
+          alt=""
+        />
+      </section>
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
