--- a/mini.html
+++ b/mini.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Finn</title>
+    <title>About Mini</title>
     <link rel="stylesheet" href="mini.css" />
     <link
       rel="stylesheet"
@@ -20,43 +20,42 @@
           <h2 data-aos="fade-right" data-aos-duration="1000"><span class="heart">Biography &#10084;</span></h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-         Name : Finn<br>
-                    Birth Date : September 24, 2024<br>
-                    Birth Place : Georgia<br>
-                    Hobbies : <br>
-                         <span class="heart">&#10084;</span>Sleeping (inherited from his daddy)<br>
-                        <span class="heart">&#10084;</span>Watching his sister solve the rubiks cube<br>
-                        <span class="heart">&#10084;</span>Sleeping<br>
-                        <span class="heart">&#10084;</span>Chewing on toys<br>
+         Name : Mini (Minnie)<br>
+                    Birth Date: January 31, 2024<br>
+                    Birth Place: Georgia<br>
+                    Hobbies: <br>
+                         <span class="heart">&#10084;</span>Rubik's Cubes (inherited from her Mommy)<br>
+                        <span class="heart">&#10084;</span>Video games<br>
+                        <span class="heart">&#10084;</span>Watching Daddy play video games<br>
+                        <span class="heart">&#10084;</span>Fake sleeping<br>
                         <span class="heart">&#10084;</span>Cuddling<br>
                         <span class="heart">&#10084;</span>Mommy and Daddy<br>
-                        <span class="heart">&#10084;</span>Baby Scientist<br>
+                        <span class="heart">&#10084;</span>Rebellion Leader<br>
         </p>
         <img
           data-aos="fade-left"
           data-aos-duration="1500"
           data-aos-delay="200"
-          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnbio.jpg?raw=true"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/minibio.jpg?raw=true"
           alt=""
         />
       </section>
   
       <section>
         <div class="section-heading">
-          <h2 data-aos="fade-left" data-aos-duration="1000"><span class="heart">Biography &#10084;</span></h2>
+          <h2 data-aos="fade-left" data-aos-duration="1000"><span class="heart">&#10084;</span></h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
-          Finn is the third child of the Avestruz Family. He is a loving and cuddly child. Every night, he would ask his Mommy to cuddle with him and she can't bear to refuse. Sometimes, he grumble in
-                his sleep blaming his Daddy for making him sleepy. Despite this, he loves Daddy a lot (of course he loves Mommy more). As the youngest child in the
-                family, he loves to follow his older brother and older sister Alex and Mini. He spends the most time with Alex as they always cuddle together and only
-                met his sister through video calls. Although they never met, he loves watching his sister play games when he gets the chance. He wants to be a scientist
-                when he grows up (inspired by his brother).
+         Mini is the second child of the Avestruz Family. She is a sweet child full of mischief and energy. Most would describe her as a little ball of energy. She spent the first 7 months with her Mommy
+                where she developed her interest in Rubik's cubes. After she went to accompany her Daddy, she gained an interest in video games. Alas, this gave her 
+                Mommy a headache because she would catch Mini neglecting her sleep to play games (due to her Daddy's encouragement). This sparks up her rebellious nature
+                that is similar to her older brother, Alex. Although she is mischievous, she adores her little brother, Finn, whom she calls and chat twice a week.
         </p>
         <img
           data-aos="fade-right"
           data-aos-duration="1500"
           data-aos-delay="200"
-          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnmin.jpg?raw=true"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/miniphil.png?raw=true"
           alt=""
         />
       </section>
