--- a/finn.html
+++ b/finn.html
@@ -21,9 +21,9 @@
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
          Name : Finn<br>
-                    Birth Date : September 24, 2024<br>
-                    Birth Place : Georgia<br>
-                    Hobbies : <br>
+                    Birth Date: September 24, 2024<br>
+                    Birth Place: Georgia<br>
+                    Hobbies: <br>
                          <span class="heart">&#10084;</span>Sleeping (inherited from his daddy)<br>
                         <span class="heart">&#10084;</span>Watching his sister solve the rubiks cube<br>
                         <span class="heart">&#10084;</span>Sleeping<br>
@@ -43,7 +43,7 @@
   
       <section>
         <div class="section-heading">
-          <h2 data-aos="fade-left" data-aos-duration="1000"><span class="heart">Biography &#10084;</span></h2>
+          <h2 data-aos="fade-left" data-aos-duration="1000"><span class="heart">&#10084;</span></h2>
         </div>
         <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
           Finn is the third child of the Avestruz Family. He is a loving and cuddly child. Every night, he would ask his Mommy to cuddle with him and she can't bear to refuse. Sometimes, he grumble in
