--- a/alex.html
+++ b/alex.html
@@ -1,54 +1,71 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>About Alex</title>
-    <style>
-        /* Set a gradient background for the entire page */
-        body {
-            background: linear-gradient(to right, #ffb8ca, #ffd1dd); /* Gradient from pink to orange */
-        }
-    </style>
-</head>
-<body style="font-family:Arial;">
-    <center>
-    <table width="700px" border="1">
-        <tr>
-            <td rowspan="2">
-                   <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/alexbio.jpg?raw=true" alt="My Photo 1" width="48%" style="float:left; margin-right: 4%;">
-                <img src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/alexmin.jpg?raw=true" alt="My Photo 2" width="48%" style="float:left;">
-            </td>
-            <th width="500px" height="50px" bgcolor="#ffa8be">Biography</th>
-        </tr>
-        <tr>
-            <td>
-                <ul>
-                    <li>Name : Alex</li>
-                    <li>Birth Date : 2009</li>
-                    <li>Birth Place : Georgia</li>
-                    <li>Hobbies : Causing a ruckus
-                        <br> Fake being cute
-                        <br> Adventuring
-                        <br> Eating fish
-                        <br> Mommy and Daddy
-                        <br> Hibernating
-                    </li>
-                </ul>
-            </td>
-        </tr>
-        <tr>
-            <th colspan="2" height="50px" bgcolor="#ffa8be">About Alex</th>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <p>Alex is the first child of the Avestruz Family. Despite him being a lot older than his other two siblings, he was thrilled when he discovered that he is going to have younger siblings. When his Mommy
-                first got him, he was carried everywhere with her. He got his name from her favorite character in Wizards of Waverly Place, Alex Russo. During most of his days,
-                he hangs out with his uncle and his Mommy. With his uncle, he was very rebellious and he often fake being sad to get his Mommy's sympathy (which she falls for
-                everytime). Although he is hibernating deep in sleep, he subconsciously cuddles with his younger brother, Finn, and can hear his younger sister, Mini. Fun Fact:
-                there is a book about how Alex and his Mommy first met.</p>
-            </td>
-        </tr>
-        <tr>
-    </table>
-    </center>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About Finn</title>
+    <link rel="stylesheet" href="alex.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"
+    />
+  </head>
+  <body>
+    <!-- Header with navigation bar -->
+
+    <!-- Main content container -->
+    <div class="section-container">
+ <section>
+        <div class="section-heading">
+          <h2 data-aos="fade-right" data-aos-duration="1000"><span class="heart">Biography &#10084;</span></h2>
+        </div>
+        <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
+         Name : Finn<br>
+                    Birth Date: September 24, 2024<br>
+                    Birth Place: Georgia<br>
+                    Hobbies: <br>
+                         <span class="heart">&#10084;</span>Sleeping (inherited from his daddy)<br>
+                        <span class="heart">&#10084;</span>Watching his sister solve the rubiks cube<br>
+                        <span class="heart">&#10084;</span>Sleeping<br>
+                        <span class="heart">&#10084;</span>Chewing on toys<br>
+                        <span class="heart">&#10084;</span>Cuddling<br>
+                        <span class="heart">&#10084;</span>Mommy and Daddy<br>
+                        <span class="heart">&#10084;</span>Baby Scientist<br>
+        </p>
+        <img
+          data-aos="fade-left"
+          data-aos-duration="1500"
+          data-aos-delay="200"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnbio.jpg?raw=true"
+          alt=""
+        />
+      </section>
+  
+      <section>
+        <div class="section-heading">
+          <h2 data-aos="fade-left" data-aos-duration="1000"><span class="heart">&#10084;</span></h2>
+        </div>
+        <p data-aos="fade" data-aos-duration="800" data-aos-delay="400">
+          Finn is the third child of the Avestruz Family. He is a loving and cuddly child. Every night, he would ask his Mommy to cuddle with him and she can't bear to refuse. Sometimes, he grumble in
+                his sleep blaming his Daddy for making him sleepy. Despite this, he loves Daddy a lot (of course he loves Mommy more). As the youngest child in the
+                family, he loves to follow his older brother and older sister Alex and Mini. He spends the most time with Alex as they always cuddle together and only
+                met his sister through video calls. Although they never met, he loves watching his sister play games when he gets the chance. He wants to be a scientist
+                when he grows up (inspired by his brother).
+        </p>
+        <img
+          data-aos="fade-right"
+          data-aos-duration="1500"
+          data-aos-delay="200"
+          src="https://github.com/ilovemybabo/To-My-Sun-and-Stars/blob/main/images/finnmin.jpg?raw=true"
+          alt=""
+        />
+      </section>
+
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+  </body>
 </html>
